tests/derive_arc/fails/noderive.stderr
error[E0080]: evaluation of constant value failed
  --> tests/derive_arc/fails/noderive.rs:28:5
   |
28 |     const_assert!(impls!(Arc<AtomicCounter>:  Counter));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = note: this error originates in the macro `const_assert` (in Nightly builds, run with -Z macro-backtrace for more info)
